Bug 1821761 - don't keep too many entries in UntrustedModulesData r=mhowell

Differential Revision: https://phabricator.services.mozilla.com/D172308