toolkit/xre/dllservices/UntrustedModulesData.cpp
@@ -339,6 +339,7 @@ void UntrustedModulesData::AddNewLoads(
   for (auto&& stack : aStacks) {
     mStacks.AddStack(stack);
   }
+  Truncate(false);
 }
 
 void UntrustedModulesData::MergeModules(UntrustedModulesData& aNewData) {
@@ -377,10 +378,13 @@ void UntrustedModulesData::Merge(UntrustedModulesData&& aNewData) {
   mNumEvents += newData.mNumEvents;
   mEvents.extendBack(std::move(newData.mEvents));
   mStacks.AddStacks(newData.mStacks);
+  Truncate(false);
 }
 
-void UntrustedModulesData::Truncate() {
-  mStacks.Clear();
+void UntrustedModulesData::Truncate(bool aDropCallstackData) {
+  if (aDropCallstackData) {
+    mStacks.Clear();
+  }
 
   if (mNumEvents <= kMaxEvents) {
     return;
@@ -390,6 +394,8 @@ void UntrustedModulesData::Truncate() {
   events.splice(0, mEvents, mNumEvents - kMaxEvents, kMaxEvents);
   std::swap(events, mEvents);
   mNumEvents = kMaxEvents;
+  // mStacks only keeps the latest kMaxEvents stacks, so mEvents will
+  // still be lined up with mStacks.
 }
 
 void UntrustedModulesData::MergeWithoutStacks(UntrustedModulesData&& aNewData) {
@@ -409,7 +415,7 @@ void UntrustedModulesData::MergeWithoutStacks(UntrustedModulesData&& aNewData) {
   mNumEvents += newData.mNumEvents;
   mEvents.extendBack(std::move(newData.mEvents));
 
-  Truncate();
+  Truncate(true);
 }
 
 void UntrustedModulesData::Swap(UntrustedModulesData& aOther) {
